--- a/Style-Sheets/about-styles.css
+++ b/Style-Sheets/about-styles.css
@@ -83,19 +83,15 @@ body{
     align-items: center;
     gap: 5px;
     text-decoration: none;
-    color: #000;
-    margin-left: 50px;
     background-color: #C2A878;
-    padding-left: 10px;
-    padding-right: 18px;
+    padding: 10px 18px;
     font-size: 18px;
     font-family: 'poppins', sans-serif;
     font-weight: 600;
     border-radius: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
     color: white;
     cursor: pointer;
+    transition: all 0.3s ease;
     border: none;
 }
 
@@ -398,7 +394,7 @@ body{
 }
 
 
-.ShuajbGerguri{}
+
 
 .columnb-img {
   width: 100%;
@@ -736,11 +732,11 @@ footer {
     }
     
     .mainpage {
-        height: 60vh;
+        height: 35vh;
     }
     
     .slideshow-container {
-        height: 60vh;
+        height: 40vh;
     }
     
     .mainpage h1 {
@@ -797,7 +793,7 @@ footer {
     
     .column-img {
         max-width: 100%;
-        height: 300px;
+        height: 400px;
     }
     
     .columna22 img {
